feat(): Simplificando linhas de códigos
Algumas simplificações na parte de aplicar a distribuição normal, de modo a ser necessário aplicar para outras duas tabelas de modo que a simplificação ainda pode ser feita
no parte do replace'

--- a/notebooks/pesoealtura.ipynb
+++ b/notebooks/pesoealtura.ipynb
@@ -16,20 +16,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nmcxrOXTr9pl",
-        "outputId": "52127d1e-5f37-4ca5-9f15-26f5feab9c4a"
+        "outputId": "887cf6c2-e144-4b80-af48-eddc29394229"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "QZUzz16ksMyg"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,10 +97,31 @@
         "df_pesoEaltura = df_novo"
       ],
       "metadata": {
-        "id": "WN0dMvdDsQr8"
+        "id": "WN0dMvdDsQr8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3617eb38-f4a1-44de-a5ba-90f147e18e52"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/pandas/core/series.py:1056: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  cacher_needs_updating = self._check_is_chained_assignment_possible()\n",
+            "/usr/local/lib/python3.8/dist-packages/pandas/core/indexing.py:1724: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  self._setitem_with_indexer_missing(indexer, value)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -109,49 +130,14 @@
         "\n",
         "df_pesoEaltura['primeiro_IMC'] = (df_pesoEaltura['primeiro_peso'] / pow(df_pesoEaltura['primeira_altura']/100, 2))\n",
         "\n",
-        "primeiro_peso_mean = df_pesoEaltura[\"primeiro_peso\"].mean(skipna=True)\n",
-        "primeiro_peso_std = df_pesoEaltura[\"primeiro_peso\"].std(skipna=True)\n",
-        "null_primeiro_peso = df_pesoEaltura.primeiro_peso.isnull().sum()\n",
-        "lista_normal_primeiro_peso = np.random.normal(primeiro_peso_mean, primeiro_peso_std, null_primeiro_peso)\n",
+        "lista_pesoEaltura = [\"primeiro_peso\", \"primeira_altura\", \"ultimo_peso\", \"ultima_altura\", \"primeiro_IMC\"]\n",
+        "lista_normal = []\n",
         "\n",
-        "primeira_altura_mean = df_pesoEaltura[\"primeira_altura\"].mean(skipna=True)\n",
-        "primeira_altura_std = df_pesoEaltura[\"primeira_altura\"].std(skipna=True)\n",
-        "null_primeira_altura = df_pesoEaltura.primeira_altura.isnull().sum()\n",
-        "lista_normal_primeira_altura = np.random.normal(primeira_altura_mean, primeira_altura_std, null_primeira_altura)\n",
-        "\n",
-        "ultimo_peso_mean = df_pesoEaltura[\"ultimo_peso\"].mean(skipna=True)\n",
-        "ultimo_peso_std = df_pesoEaltura[\"ultimo_peso\"].std(skipna=True)\n",
-        "null_ultimo_peso = df_pesoEaltura.ultimo_peso.isnull().sum()\n",
-        "lista_normal_ultimo_peso = np.random.normal(ultimo_peso_mean, ultimo_peso_std, null_ultimo_peso)\n",
-        "\n",
-        "ultima_altura_mean = df_pesoEaltura[\"ultima_altura\"].mean(skipna=True)\n",
-        "ultima_altura_std = df_pesoEaltura[\"ultima_altura\"].std(skipna=True)\n",
-        "null_ultima_altura = df_pesoEaltura.ultima_altura.isnull().sum()\n",
-        "lista_normal_ultima_altura = np.random.normal(ultima_altura_mean, ultima_altura_std, null_ultima_altura)\n",
-        "\n",
-        "for i in range(0, null_primeiro_peso):\n",
-        "  lista_normal_primeiro_peso[i] = round(lista_normal_primeiro_peso[i])\n",
-        "\n",
-        "for i in range(0, null_primeira_altura):\n",
-        "  lista_normal_primeira_altura[i] = round(lista_normal_primeira_altura[i])\n",
-        "\n",
-        "for i in range(0, null_ultimo_peso):\n",
-        "  lista_normal_ultimo_peso[i] = round(lista_normal_ultimo_peso[i])\n",
-        "\n",
-        "for i in range(0, null_ultima_altura):\n",
-        "  lista_normal_ultima_altura[i] = round(lista_normal_ultima_altura[i])\n",
-        "\n",
-        "primeiro_IMC_mean = df_pesoEaltura[\"primeiro_IMC\"].mean(skipna=True)\n",
-        "primeiro_IMC_std = df_pesoEaltura[\"primeiro_IMC\"].std(skipna=True)\n",
-        "null_primeiro_IMC = df_pesoEaltura.primeiro_IMC.isnull().sum()\n",
-        "lista_normal_primeiro_IMC = np.random.normal(primeiro_IMC_mean, primeiro_IMC_std, null_primeiro_IMC)\n",
-        "\n",
-        "df_pesoEaltura[\"primeiro_peso\"] = df_pesoEaltura[\"primeiro_peso\"].fillna(pd.Series(lista_normal_primeiro_peso, index=df_pesoEaltura[\"primeiro_peso\"].index[df_pesoEaltura[\"primeiro_peso\"].isnull()]))\n",
-        "df_pesoEaltura[\"primeira_altura\"] = df_pesoEaltura[\"primeira_altura\"].fillna(pd.Series(lista_normal_primeira_altura, index=df_pesoEaltura[\"primeira_altura\"].index[df_pesoEaltura[\"primeira_altura\"].isnull()]))\n",
-        "df_pesoEaltura[\"ultimo_peso\"] = df_pesoEaltura[\"ultimo_peso\"].fillna(pd.Series(lista_normal_ultimo_peso, index=df_pesoEaltura[\"ultimo_peso\"].index[df_pesoEaltura[\"ultimo_peso\"].isnull()]))\n",
-        "df_pesoEaltura[\"ultima_altura\"] = df_pesoEaltura[\"ultima_altura\"].fillna(pd.Series(lista_normal_ultima_altura, index=df_pesoEaltura[\"ultima_altura\"].index[df_pesoEaltura[\"ultima_altura\"].isnull()]))\n",
-        "df_pesoEaltura[\"primeiro_IMC\"] = df_pesoEaltura[\"primeiro_IMC\"].fillna(pd.Series(lista_normal_primeiro_IMC, index=df_pesoEaltura[\"primeiro_IMC\"].index[df_pesoEaltura[\"primeiro_IMC\"].isnull()]))\n",
-        "\n",
+        "for i in lista_pesoEaltura: \n",
+        "  df_pesoEaltura[i] = df_pesoEaltura[i].fillna(pd.Series(np.random.normal(df_pesoEaltura[i].std(skipna=True), \n",
+        "                                                                          df_pesoEaltura[i].std(skipna=True), \n",
+        "                                                                          df_pesoEaltura[i].isnull().sum()), \n",
+        "                                                         index=df_pesoEaltura[i].index[df_pesoEaltura[i].isnull()]))\n",
         "\n",
         "df_pesoEaltura['ultimo_IMC'] = (df_pesoEaltura['ultimo_peso'] / pow(df_pesoEaltura['ultima_altura']/100, 2))\n",
         "\n",
@@ -163,9 +149,9 @@
           "height": 424
         },
         "id": "GuItiu-4Fqrg",
-        "outputId": "258d1873-aae6-4d82-a933-04c987ded3e6"
+        "outputId": "2d736857-01ba-487e-8e72-7d002ba9450b"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -185,17 +171,17 @@
               "4271    82240.0  Dados Antropometricos              1.0  2020-12-08   \n",
               "\n",
               "      primeiro_peso  primeira_altura  primeiro_IMC  ultimo_peso  \\\n",
-              "0             57.80            158.0     23.153341        64.90   \n",
-              "1             61.00            156.0     25.065746        63.80   \n",
-              "2             84.00            152.0     36.357341        85.90   \n",
-              "3             57.90            143.0     28.314343        51.00   \n",
-              "4             63.20            167.0     22.661264        63.65   \n",
+              "0             57.80            158.0     23.153341    64.900000   \n",
+              "1             61.00            156.0     25.065746    63.800000   \n",
+              "2             84.00            152.0     36.357341    85.900000   \n",
+              "3             57.90            143.0     28.314343    51.000000   \n",
+              "4             63.20            167.0     22.661264    63.650000   \n",
               "...             ...              ...           ...          ...   \n",
-              "4267          85.40            153.0     36.481695        78.00   \n",
-              "4268          81.10            151.0     35.568615        78.00   \n",
-              "4269          71.40            156.5     29.152079        75.65   \n",
-              "4270         135.85            174.0     44.870525        78.00   \n",
-              "4271          80.35            161.0     30.998032        80.35   \n",
+              "4267          85.40            153.0     36.481695    78.340681   \n",
+              "4268          81.10            151.0     35.568615    78.000000   \n",
+              "4269          71.40            156.5     29.152079    75.650000   \n",
+              "4270         135.85            174.0     44.870525    78.258215   \n",
+              "4271          80.35            161.0     30.998032    80.350000   \n",
               "\n",
               "      ultima_altura  ultimo_IMC  \n",
               "0             158.0   25.997436  \n",
@@ -204,17 +190,17 @@
               "3             143.0   24.940095  \n",
               "4             167.0   22.822618  \n",
               "...             ...         ...  \n",
-              "4267          154.0   32.889189  \n",
+              "4267          154.0   33.032839  \n",
               "4268          151.0   34.209026  \n",
               "4269          156.0   31.085634  \n",
-              "4270          174.0   25.762981  \n",
+              "4270          174.0   25.848268  \n",
               "4271          161.0   30.998032  \n",
               "\n",
               "[4272 rows x 10 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-19f3117c-97b0-4ace-b4b9-6ecde54607bd\">\n",
+              "  <div id=\"df-7d5f8f9d-8018-43fd-a739-64b72fa3cd62\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -256,7 +242,7 @@
               "      <td>57.80</td>\n",
               "      <td>158.0</td>\n",
               "      <td>23.153341</td>\n",
-              "      <td>64.90</td>\n",
+              "      <td>64.900000</td>\n",
               "      <td>158.0</td>\n",
               "      <td>25.997436</td>\n",
               "    </tr>\n",
@@ -269,7 +255,7 @@
               "      <td>61.00</td>\n",
               "      <td>156.0</td>\n",
               "      <td>25.065746</td>\n",
-              "      <td>63.80</td>\n",
+              "      <td>63.800000</td>\n",
               "      <td>155.0</td>\n",
               "      <td>26.555671</td>\n",
               "    </tr>\n",
@@ -282,7 +268,7 @@
               "      <td>84.00</td>\n",
               "      <td>152.0</td>\n",
               "      <td>36.357341</td>\n",
-              "      <td>85.90</td>\n",
+              "      <td>85.900000</td>\n",
               "      <td>152.0</td>\n",
               "      <td>37.179709</td>\n",
               "    </tr>\n",
@@ -295,7 +281,7 @@
               "      <td>57.90</td>\n",
               "      <td>143.0</td>\n",
               "      <td>28.314343</td>\n",
-              "      <td>51.00</td>\n",
+              "      <td>51.000000</td>\n",
               "      <td>143.0</td>\n",
               "      <td>24.940095</td>\n",
               "    </tr>\n",
@@ -308,7 +294,7 @@
               "      <td>63.20</td>\n",
               "      <td>167.0</td>\n",
               "      <td>22.661264</td>\n",
-              "      <td>63.65</td>\n",
+              "      <td>63.650000</td>\n",
               "      <td>167.0</td>\n",
               "      <td>22.822618</td>\n",
               "    </tr>\n",
@@ -334,9 +320,9 @@
               "      <td>85.40</td>\n",
               "      <td>153.0</td>\n",
               "      <td>36.481695</td>\n",
-              "      <td>78.00</td>\n",
+              "      <td>78.340681</td>\n",
               "      <td>154.0</td>\n",
-              "      <td>32.889189</td>\n",
+              "      <td>33.032839</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4268</th>\n",
@@ -347,7 +333,7 @@
               "      <td>81.10</td>\n",
               "      <td>151.0</td>\n",
               "      <td>35.568615</td>\n",
-              "      <td>78.00</td>\n",
+              "      <td>78.000000</td>\n",
               "      <td>151.0</td>\n",
               "      <td>34.209026</td>\n",
               "    </tr>\n",
@@ -360,7 +346,7 @@
               "      <td>71.40</td>\n",
               "      <td>156.5</td>\n",
               "      <td>29.152079</td>\n",
-              "      <td>75.65</td>\n",
+              "      <td>75.650000</td>\n",
               "      <td>156.0</td>\n",
               "      <td>31.085634</td>\n",
               "    </tr>\n",
@@ -373,9 +359,9 @@
               "      <td>135.85</td>\n",
               "      <td>174.0</td>\n",
               "      <td>44.870525</td>\n",
-              "      <td>78.00</td>\n",
+              "      <td>78.258215</td>\n",
               "      <td>174.0</td>\n",
-              "      <td>25.762981</td>\n",
+              "      <td>25.848268</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4271</th>\n",
@@ -386,7 +372,7 @@
               "      <td>80.35</td>\n",
               "      <td>161.0</td>\n",
               "      <td>30.998032</td>\n",
-              "      <td>80.35</td>\n",
+              "      <td>80.350000</td>\n",
               "      <td>161.0</td>\n",
               "      <td>30.998032</td>\n",
               "    </tr>\n",
@@ -394,7 +380,7 @@
               "</table>\n",
               "<p>4272 rows × 10 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-19f3117c-97b0-4ace-b4b9-6ecde54607bd')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7d5f8f9d-8018-43fd-a739-64b72fa3cd62')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -445,12 +431,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-19f3117c-97b0-4ace-b4b9-6ecde54607bd button.colab-df-convert');\n",
+              "          document.querySelector('#df-7d5f8f9d-8018-43fd-a739-64b72fa3cd62 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-19f3117c-97b0-4ace-b4b9-6ecde54607bd');\n",
+              "          const element = document.querySelector('#df-7d5f8f9d-8018-43fd-a739-64b72fa3cd62');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -473,7 +459,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 132
+          "execution_count": 11
         }
       ]
     },
@@ -501,7 +487,7 @@
         "id": "yTtE4UNuJCkW",
         "outputId": "248e0037-d1a1-4ccc-ad0c-2247b6d0e8b1"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
