feat(): Adding graphics

--- a/notebooks/Genesis.ipynb
+++ b/notebooks/Genesis.ipynb
@@ -27,7 +27,7 @@
         },
         "outputId": "f76c5176-f5a6-416e-ae3f-6509963d992d"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "MdOfBLnMe-0z"
       },
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "oP2ePkkXoHDx"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "inNu2tKWrL_w"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "7dg2R8rSeVNj"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -229,7 +229,7 @@
         },
         "outputId": "a7bb51f3-f31f-49b8-a78f-3ac2be88b8eb"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -546,7 +546,7 @@
       "metadata": {
         "id": "hytkSKCvPUk_"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +579,7 @@
       "metadata": {
         "id": "RcyxZqbXL-og"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -623,7 +623,7 @@
         "id": "nW-h0eD0QTlr",
         "outputId": "0964cc82-211e-4d88-b6e6-bc30fbc795c2"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -922,7 +922,7 @@
       "metadata": {
         "id": "Ck3wWtOzFNXT"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1050,7 +1050,7 @@
       "metadata": {
         "id": "frMtWuXpnOrg"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1072,7 +1072,7 @@
       "metadata": {
         "id": "ZIWWOPwpfUlv"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1091,7 +1091,7 @@
       "metadata": {
         "id": "r3aqWaDTlYcg"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1151,7 +1151,7 @@
         "id": "wWp-g5AiqpAi",
         "outputId": "06761b44-916c-4b11-c779-6a943ca7be5a"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1724,7 +1724,7 @@
         "id": "XNyVud2BT-Nq",
         "outputId": "24ce16ae-4c62-4943-a0e0-93b73aa66235"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1772,7 +1772,7 @@
         "id": "7ZtJxsx_UFSz",
         "outputId": "9d848232-c90e-4f03-f936-861dbb23db0f"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2122,7 +2122,7 @@
       "metadata": {
         "id": "VpPkPp2YUJ4X"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2135,7 +2135,7 @@
       "metadata": {
         "id": "H0kgYEpAWN41"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2151,7 +2151,7 @@
         "id": "sbF6IGJLZuMX",
         "outputId": "62e68578-b934-4910-b084-c69ce38e9596"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2653,7 +2653,7 @@
         "id": "SyqulCb3A58K",
         "outputId": "38136475-f119-4b5d-f327-4e228a2c7035"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2683,7 +2683,7 @@
         "id": "dBC2k4hw-DHD",
         "outputId": "59d7a084-1827-4468-f4ab-31511e23ef25"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2718,7 +2718,7 @@
         "id": "r0ga_e-lArOe",
         "outputId": "55c7105f-4bd6-4a55-ccf3-515e3316a0f5"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2778,7 +2778,7 @@
         "id": "y-NAH6zGEwKN",
         "outputId": "0ce37436-85f6-4816-f54f-ff69fb747545"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2803,7 +2803,7 @@
         "id": "xwJCpIcfJA-b",
         "outputId": "8ef947c9-8645-4875-f6d8-f92d12909dfd"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3209,7 +3209,7 @@
         "id": "pq47Z03Wl-Yg",
         "outputId": "e8ab6fcb-87be-44ff-eb75-2c5dab85e87d"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3701,7 +3701,323 @@
       "metadata": {
         "id": "Gu_1DZnDJQk5"
       },
-      "execution_count": 64,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tumor1 = merged_df.query('subtipo_tumoral == 1')\n",
+        "tumor2 = merged_df.query('subtipo_tumoral == 2')\n",
+        "tumor3 = merged_df.query('subtipo_tumoral == 3')\n",
+        "tumor4 = merged_df.query('subtipo_tumoral == 4')\n",
+        "tumor5 = merged_df.query('subtipo_tumoral == 5')\n",
+        "figura = plt.figure(figsize=(26, 12))\n",
+        "figura.suptitle('Recidiva local', fontsize=20)\n",
+        "figura.add_subplot(161)\n",
+        "grafico = sns.countplot(x='recidiva_local', data = merged_df)\n",
+        "grafico.legend(title='Recidiva - Total', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Recidiva - Subtipos')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(162)\n",
+        "grafico1 = sns.countplot(x='recidiva_local', data = tumor1)\n",
+        "grafico1.legend(title='Recidiva - Luminal A', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Luminal A')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(163)\n",
+        "grafico2 = sns.countplot(x='recidiva_local', data = tumor2)\n",
+        "grafico2.legend(title='Recidiva - Luminal B', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Luminal B')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(164)\n",
+        "grafico3 = sns.countplot(x='recidiva_local', data = tumor3)\n",
+        "grafico3.legend(title='Recidiva - HER 2', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('HER 2')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(165)\n",
+        "grafico4 = sns.countplot(x='recidiva_local', data = tumor4)\n",
+        "grafico4.legend(title='Recidiva - Triplo Negativo', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Triplo Negativo')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(166)\n",
+        "grafico5 = sns.countplot(x='recidiva_local', data = tumor5)\n",
+        "grafico5.legend(title='Recidiva - Metastático', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Metastático')\n",
+        "plt.show\n",
+        "\n",
+        "for i in grafico.patches:\n",
+        "  grafico.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico1.patches:\n",
+        "  grafico1.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico2.patches:\n",
+        "  grafico2.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico3.patches:\n",
+        "  grafico3.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico4.patches:\n",
+        "  grafico4.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico5.patches:\n",
+        "  grafico5.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')"
+      ],
+      "metadata": {
+        "id": "WSRQYiI3T6jT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "figura = plt.figure(figsize=(30, 12))\n",
+        "figura.add_subplot(161)\n",
+        "figura.suptitle('Recidiva Regional', fontsize=20)\n",
+        "grafico = sns.countplot(x='recidiva_regional', data = merged_df)\n",
+        "grafico.legend(title='Recidiva - Total', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Recidiva - Subtipos')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(162)\n",
+        "grafico1 = sns.countplot(x='recidiva_regional', data = tumor1)\n",
+        "grafico1.legend(title='Recidiva - Luminal A', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Luminal A')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(163)\n",
+        "grafico2 = sns.countplot(x='recidiva_regional', data = tumor2)\n",
+        "grafico2.legend(title='Recidiva - Luminal B', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Luminal B')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(164)\n",
+        "grafico3 = sns.countplot(x='recidiva_regional', data = tumor3)\n",
+        "grafico3.legend(title='Recidiva - HER 2', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('HER 2')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(165)\n",
+        "grafico4 = sns.countplot(x='recidiva_regional', data = tumor4)\n",
+        "grafico4.legend(title='Recidiva - Triplo Negativo', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Triplo Negativo')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(166)\n",
+        "grafico5 = sns.countplot(x='recidiva_regional', data = tumor5)\n",
+        "grafico5.legend(title='Recidiva - Metastático', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Metastático')\n",
+        "plt.show\n",
+        "\n",
+        "for i in grafico.patches:\n",
+        "  grafico.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico1.patches:\n",
+        "  grafico1.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico2.patches:\n",
+        "  grafico2.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico3.patches:\n",
+        "  grafico3.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico4.patches:\n",
+        "  grafico4.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico5.patches:\n",
+        "  grafico5.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')"
+      ],
+      "metadata": {
+        "id": "hlW4Xf2ZT8Sf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "figura = plt.figure(figsize=(30, 12))\n",
+        "figura.add_subplot(161)\n",
+        "figura.suptitle('Recidiva à distancia', fontsize=20)\n",
+        "grafico = sns.countplot(x='recidiva_distancia', data = merged_df)\n",
+        "grafico.legend(title='Recidiva - Total', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Recidiva - Subtipos')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(162)\n",
+        "grafico1 = sns.countplot(x='recidiva_distancia', data = tumor1)\n",
+        "grafico1.legend(title='Recidiva - Luminal A', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Luminal A')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(163)\n",
+        "grafico2 = sns.countplot(x='recidiva_distancia', data = tumor2)\n",
+        "grafico2.legend(title='Recidiva - Luminal B', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Luminal B')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(164)\n",
+        "grafico3 = sns.countplot(x='recidiva_distancia', data = tumor3)\n",
+        "grafico3.legend(title='Recidiva - HER 2', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('HER 2')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(165)\n",
+        "grafico4 = sns.countplot(x='recidiva_distancia', data = tumor4)\n",
+        "grafico4.legend(title='Recidiva - Triplo Negativo', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Triplo Negativo')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(166)\n",
+        "grafico5 = sns.countplot(x='recidiva_distancia', data = tumor5)\n",
+        "grafico5.legend(title='Recidiva - Metastático', loc='upper right', labels=['Sem recidiva', 'Com recidiva'])\n",
+        "plt.title('Metastático')\n",
+        "plt.show\n",
+        "\n",
+        "for i in grafico.patches:\n",
+        "  grafico.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico1.patches:\n",
+        "  grafico1.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico2.patches:\n",
+        "  grafico2.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico3.patches:\n",
+        "  grafico3.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico4.patches:\n",
+        "  grafico4.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico5.patches:\n",
+        "  grafico5.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')"
+      ],
+      "metadata": {
+        "id": "tYV8WU17UER_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "figura = plt.figure(figsize=(30, 12))\n",
+        "figura.add_subplot(161)\n",
+        "figura.suptitle('Última informação do Paciente', fontsize=20)\n",
+        "grafico = sns.countplot(x='ultima_informacao_paciente', data = merged_df)\n",
+        "plt.title('Todos os subtipos')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(162)\n",
+        "grafico1 = sns.countplot(x='ultima_informacao_paciente', data = tumor1)\n",
+        "plt.title('Luminal A')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(163)\n",
+        "grafico2 = sns.countplot(x='ultima_informacao_paciente', data = tumor2)\n",
+        "plt.title('Luminal B')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(164)\n",
+        "grafico3 = sns.countplot(x='ultima_informacao_paciente', data = tumor3)\n",
+        "plt.title('HER 2')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(165)\n",
+        "grafico4 = sns.countplot(x='ultima_informacao_paciente', data = tumor4)\n",
+        "plt.title('Triplo Negativo')\n",
+        "plt.show\n",
+        "\n",
+        "figura.add_subplot(166)\n",
+        "grafico5 = sns.countplot(x='ultima_informacao_paciente', data = tumor5)\n",
+        "plt.title('Metastático')\n",
+        "plt.show\n",
+        "\n",
+        "for i in grafico.patches:\n",
+        "  grafico.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico1.patches:\n",
+        "  grafico1.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico2.patches:\n",
+        "  grafico2.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico3.patches:\n",
+        "  grafico3.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico4.patches:\n",
+        "  grafico4.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')\n",
+        "  \n",
+        "for i in grafico5.patches:\n",
+        "  grafico5.annotate(i.get_height(),\n",
+        "                (i.get_x() + i.get_width() / 2, i.get_height()),\n",
+        "                ha='center')"
+      ],
+      "metadata": {
+        "id": "oyGPpSAtUM28"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8xRe_2rJUMwQ"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
